# gmp-mpfr-sys

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  RELEASES.md  build.rs  build.sh  cdoc.sh  doc.sh  rustfmt.toml  unpack.sh
cdoc-src/: after-content.html  before-content-c.html  before-content.html  index.md
cdoc-src/files/: COPYRIGHT.txt  rustdoc.css  search-index.js
doc-src/: before-content.html  index.html
gmp-6.1.2-c/: ChangeLog  Makefile.in  configure
gmp-6.1.2-c/cxx/: Makefile.in
gmp-6.1.2-c/demos/: Makefile.in
gmp-6.1.2-c/doc/: Makefile.in
gmp-6.1.2-c/mpf/: Makefile.in
gmp-6.1.2-c/mpn/: Makefile.in
gmp-6.1.2-c/mpq/: Makefile.in
gmp-6.1.2-c/mpz/: Makefile.in
gmp-6.1.2-c/printf/: Makefile.in
gmp-6.1.2-c/rand/: Makefile.in
gmp-6.1.2-c/scanf/: Makefile.in
gmp-6.1.2-c/tests/: Makefile.in
gmp-6.1.2-c/tune/: Makefile.in
gmp-6.1.2-slim/: Makefile.in
gmp-6.1.2-slim/cxx/: Makefile.in
gmp-6.1.2-slim/mpn/: Makefile.in
gmp-6.1.2-slim/rand/: Makefile.in
gmp-6.1.2-slim/scanf/: Makefile.in
gmp-6.1.2-slim/tests/: Makefile.in
gmp-6.1.2-slim/tune/: Makefile.in
mpc-1.0.3-slim/: Makefile.in  configure
mpc-1.0.3-slim/src/: Makefile.in  mpc-impl.h  mul.c
mpc-1.0.3-slim/tests/: Makefile.in
mpc-1.1-rc1-c/: Makefile.in  Makefile.vc  NEWS  configure  configure.ac
mpc-1.1-rc1-c/doc/: Makefile.in  mpc.texi  stamp-vti
mpc-1.1-rc1-c/src/: Makefile.in  mpc.h
mpc-1.1-rc1-c/tests/: Makefile.in
mpc-1.1-rc1-slim/: INSTALL  configure
mpc-1.1-rc1-slim/src/: get_version.c
mpc-1.1-rc1-slim/tests/: Makefile.in
mpc-1.1-rc1-slim/tools/: Makefile.in
mpc-1.1.0-c/: Makefile.in  configure
mpc-1.1.0-c/doc/: Makefile.in
mpc-1.1.0-c/src/: Makefile.in
mpc-1.1.0-c/tests/: Makefile.in
mpc-1.1.0-c/tools/: Makefile.in
mpfr-3.1.5/: configure
mpfr-3.1.5-p10-slim/: PATCHES  VERSION
mpfr-3.1.5-p10-slim/src/: get_patches.c  mpfr-impl.h  sin_cos.c  strtofr.c  version.c
mpfr-3.1.5-p10-slim/tests/: mpf_compat.h  tpow_all.c
mpfr-3.1.5-p8-slim/: PATCHES
mpfr-3.1.5-p8-slim/src/: vasprintf.c  version.c
mpfr-3.1.5-p8-slim/tests/: Makefile.in
mpfr-3.1.5-p9-slim/: Makefile.in  PATCHES  VERSION
mpfr-3.1.5-p9-slim/src/: get_patches.c  mpfr.h  version.c
mpfr-3.1.5-p9-slim/tune/: Makefile.in
mpfr-3.1.5-slim/: VERSION  configure
mpfr-3.1.5-slim/src/: Makefile.in  get_patches.c  mpfr.h  printf.c
mpfr-3.1.5-slim/tests/: mpf_compat.h  tl2b.c  tprintf.c  tsprintf.c  tstrtofr.c
mpfr-3.1.6-p1-slim/: Makefile.in  PATCHES  VERSION  configure
mpfr-3.1.6-p1-slim/src/: Makefile.in  get_ld.c  get_patches.c  get_si.c  get_sj.c  get_ui.c  get_uj.c  get_z.c  mpfr.h  version.c
mpfr-3.1.6-p1-slim/tune/: Makefile.in
mpfr-3.1.6-slim/tests/: Makefile.in
mpfr-4.0.0-c/: Makefile.in  configure
mpfr-4.0.0-c/doc/: Makefile.in
mpfr-4.0.0-c/src/: Makefile.in
mpfr-4.0.0-c/tests/: Makefile.in
mpfr-4.0.0-c/tune/: Makefile.in
mpfr-4.0.0-rc1-slim/: NEWS  configure
mpfr-4.0.0-rc1-slim/doc/: mpfr.texi
mpfr-4.0.0-rc1-slim/src/: Makefile.in  add1sp.c  div.c  exp.c  exp2.c  exp_2.c  fma.c  get_q.c  hypot.c  lngamma.c  mpf2mpfr.h  mpfr-cvers.h  mpfr-gmp.h  mpfr-impl.h  mpfr.h  mul.c  root.c  sin.c  sqr.c  sub1.c  sub1sp.c  subnormal.c  tanh.c  version.c  zeta.c
mpfr-4.0.0-rc1-slim/tests/: Makefile.in  reuse.c  tadd1sp.c  talloc.c  tdiv.c  texp2.c  tfma.c  tgeneric.c  tget_q.c  tget_set_d64.c  thypot.c  tj1.c  tmul_d.c  troot.c  tsub1sp.c  tsum.c  ttan.c  ttanh.c
mpfr-4.0.0-rc1-slim/tune/: Makefile.in
mpfr-4.0.0-rc2-slim/: Makefile.in  configure
mpfr-4.0.0-rc2-slim/doc/: mpfr.texi
mpfr-4.0.0-rc2-slim/src/: exp_2.c  lngamma.c  mpfr.h  version.c
mpfr-4.0.0-rc2-slim/tests/: texp.c  tlngamma.c
mpfr-4.0.0-slim/: configure
mpfr-4.0.1-c/: PATCHES  configure
mpfr-4.0.1-c/doc/: Makefile.in  mpfr.texi
mpfr-4.0.1-c/src/: get_patches.c  gmp_op.c  sqr.c
mpfr-4.0.1-c/tests/: Makefile.in  tsqr.c
mpfr-4.0.1-c/tune/: Makefile.in
mpfr-4.0.1-p11-c/: PATCHES  VERSION
mpfr-4.0.1-p13-c/: Makefile.in  PATCHES  VERSION
mpfr-4.0.1-p14-c/: ChangeLog  Makefile.in  PATCHES  VERSION  configure
mpfr-4.0.1-p6-c/: VERSION
mpfr-4.0.1-p9-c/: PATCHES  VERSION
mpfr-4.0.2-p1-c/: ChangeLog  Makefile.in  PATCHES  VERSION  configure
src/: gmp.rs  lib.rs  mpc.rs  mpfr.rs
(+71 files in other folders)
