# Copyright © 2017 University of Malta

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License and a copy of the GNU General Public License along with this
# program. If not, see <http://www.gnu.org/licenses/>.

[package]
name = "gmp-mpfr-sys"
version = "1.0.3"
authors = ["Trevor Spiteri <trevor.spiteri@um.edu.mt>"]
build = "build.rs"
description = "Rust FFI bindings for GMP, MPFR and MPC"
documentation = "https://tspiteri.gitlab.io/gmp-mpfr/gmp_mpfr_sys/"
repository = "https://gitlab.com/tspiteri/gmp-mpfr-sys"
readme = "README.md"
keywords = ["gmp", "mpfr", "mpc", "mathematics", "numerics"]
categories = ["external-ffi-bindings", "science"]
license = "LGPL-3.0+"

[features]
default = ["mpfr", "mpc"]
mpfr = []
mpc = ["mpfr"]
