# Copyright © 2017 University of Malta

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License and a copy of the GNU General Public License along with this
# program. If not, see <http://www.gnu.org/licenses/>.

[package]
name = "gmp-mpfr-sys"
version = "1.0.4"
authors = ["Trevor Spiteri <trevor.spiteri@um.edu.mt>"]
build = "build.rs"
description = "Rust FFI bindings for GMP, MPFR and MPC"
documentation = "https://docs.rs/gmp-mpfr-sys/"
repository = "https://gitlab.com/tspiteri/gmp-mpfr-sys"
readme = "README.md"
keywords = ["gmp", "mpfr", "mpc", "mathematics", "numerics"]
categories = ["external-ffi-bindings", "science"]
license = "LGPL-3.0+"

[features]
default = ["mpfr", "mpc"]

# Libraries built:
# gmp: always built
# mpfr: built when mpfr or mpc features are required (default)
# mpc: built when mpc feature is required (default)

mpfr = []
mpc = ["mpfr"]

# When building the C libraries, make is followed by make check
# according to the following:
# * If ctest is enabled:
#       make check
# * If ctest is disabled and cnotest is enabled:
#       do not make check
# * If ctest is disabled and cnottest is disabled (default):
#       make check for release build only

ctest = []
cnotest = []
