# Copyright © 2017–2018 University of Malta

# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved. This file is offered as-is,
# without any warranty.

[package]
name = "gmp-mpfr-sys"
version = "1.1.9"
authors = ["Trevor Spiteri <trevor.spiteri@um.edu.mt>"]
description = "Rust FFI bindings for GMP, MPFR and MPC"
documentation = "https://docs.rs/gmp-mpfr-sys"
repository = "https://gitlab.com/tspiteri/gmp-mpfr-sys"
readme = "README.md"
keywords = ["gmp", "bignum", "mathematics", "numerics"]
categories = ["external-ffi-bindings", "science"]
license = "LGPL-3.0+"
build = "build.rs"
links = "gmp"

[features]
default = ["mpfr", "mpc"]
mpfr = []
mpc = ["mpfr"]

# When building the C libraries, make is followed by make check
# according to the following:
# * If ctest is enabled:
#       make check
# * If ctest is disabled and cnotest is enabled:
#       do not make check
# * If ctest is disabled and cnottest is disabled (default):
#       make check for release build only

ctest = []
cnotest = []

[dependencies]
libc = "0.2"
